<resources>
    <string name="app_name">Cartentia</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="username_txt">Username</string>
    <string name="password_txt">Password</string>
    <string name="login_btn_txt">Login</string>
    <string name="empty_username_txt">Please enter username</string>
    <string name="empty_password_txt">Please enter password</string>
    <string name="nfc_disabled_txt">NFC is disabled.</string>
    <string name="nfc_feature_not_supported_txt">This device doesn\'t support NFC.</string>
    <string name="my_cart_txt">My Cart</string>
    <string name="order_history_txt">Order History</string>
    <string name="about_us_txt">About Us</string>
    <string name="logout_txt">Logout</string>
    <string name="forgot_password_txt">FORGOT PASSWORD?</string>
    <string name="login_success_txt">Login succussfully!</string>
    <string name="login_failed_txt">Login failed!</string>
    <string name="you_may_also_like_txt">You may also like</string>
    <string name="view_cart_txt">VIEW CART</string>
    <string name="place_order_txt">PLACE ORDER</string>
    <string name="addproduct_txt"> has been added to your cart successfully</string>
    <string name="quantity_txt">Qty:   </string>
    <string name="total_txt">Total:</string>
    <string name="empty_cart_txt">\"Your cart is empty! Please add Product.\"</string>
    <string name="user_role_txt">Primary</string>
    <string name="gcm_SenderId">104877605106</string>
    <string name="ruppee_symbol_txt">\u20B9</string>
    <string name="cart_empty_txt">No products in your cart.</string>
    <string name="placed_order_confirmation_txt">Your order has been placed successfully and awaiting acceptance.</string>
    <string name="server_error_txt">Please try later!</string>
    <string name="order_status_txt">55e280f3f16422c805aaadb7</string>
    <string name="default_latlon_txt">12.973280,77.594982</string>
    <string name="place_order_confirmation_title_txt">Place Order?</string>
    <string name="place_order_confirmation_dialog_message_txt">Are you sure you want to place the order?</string>
    <string name="add_to_cart">Added to Cart</string>
    <string name="image_txt">/images</string>
    <string name="image_url_txt">images/mobile</string>
    <string name="product_not_found">Product not found! Please try later.</string>
    <string name="notification_data_key_txt">Order Status</string>
</resources>
