<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_cart"
            android:icon="@drawable/sidebar_icn_cart"
            android:title="@string/my_cart_txt" />
        <item
            android:id="@+id/order_history"
            android:icon="@drawable/sidebar_icn_history"
            android:title="@string/order_history_txt" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/sidebar_icn_about"
            android:title="@string/about_us_txt" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/sidebar_icn_about"
            android:title="@string/logout_txt" />
    </group>
</menu>